2023-07-06T01:46:35Z:
* notice: GitHub Actions Run: https://github.com/andry81-devops/andry81-devops/actions/runs/5470671413 # 963
* notice: Stats Output Repository: https://github.com/andry81-stats/gh-action--accum-inpage-downloads--gh-stats/commits?branch=master&time_zone=utc&until=2023-07-06
* notice: last 14d: unq all: 17 53
* notice: prev accum: outdated-unq outdated-all / unq all: 502 803 / 533 856
* notice: next accum: outdated-unq outdated-all / unq all: 505 808 / 536 861
* notice: prev exec diff / last date diff / accum: unq all: +3 +5 -0 -0 / +5 +8 -0 -0 / 5 8
* notice: removed / changed dates: [2023-06-21] / [2023-07-05]

2023-07-05T16:24:14Z:
* notice: GitHub Actions Run: https://github.com/andry81-devops/andry81-devops/actions/runs/5466661014 # 962
* notice: Stats Output Repository: https://github.com/andry81-stats/gh-action--accum-inpage-downloads--gh-stats/commits?branch=master&time_zone=utc&until=2023-07-05
* notice: last 14d: unq all: 16 51
* notice: prev accum: outdated-unq outdated-all / unq all: 502 803 / 531 853
* notice: next accum: outdated-unq outdated-all / unq all: 502 803 / 533 856
* notice: prev exec diff / last date diff / accum: unq all: +2 +3 -1 -2 / +2 +3 -0 -0 / 2 3
* notice: removed / changed dates: [] / [2023-06-21 2023-07-05]

2023-07-05T01:44:01Z:
* notice: GitHub Actions Run: https://github.com/andry81-devops/andry81-devops/actions/runs/5459661599 # 960
* notice: Stats Output Repository: https://github.com/andry81-stats/gh-action--accum-inpage-downloads--gh-stats/commits?branch=master&time_zone=utc&until=2023-07-05
* notice: last 14d: unq all: 16 50
* notice: prev accum: outdated-unq outdated-all / unq all: 500 800 / 530 852
* notice: next accum: outdated-unq outdated-all / unq all: 502 803 / 531 853
* notice: prev exec diff / last date diff / accum: unq all: +1 +1 -0 -0 / +2 +3 -0 -0 / 2 3
* notice: removed / changed dates: [2023-06-20] / [2023-07-04]

2023-07-04T16:23:36Z: