@@ -1,11 +1,11 @@
 {
   "count": 53,
-  "uniques": 17,
+  "uniques": 16,
   "clones": [
     {
       "timestamp": "2023-06-22T00:00:00Z",
-      "count": 3,
-      "uniques": 2
+      "count": 1,
+      "uniques": 1
     },
     {
       "timestamp": "2023-06-23T00:00:00Z",
@@ -71,6 +71,11 @@
       "timestamp": "2023-07-05T00:00:00Z",
       "count": 8,
       "uniques": 5
+    },
+    {
+      "timestamp": "2023-07-06T00:00:00Z",
+      "count": 2,
+      "uniques": 2
     }
   ]
 }
